[package]
name = "d2r-mh"
version = "0.1.0"
authors = ["absence"]
edition = "2021"
repository = "https://gitlab.com/absencelul/d2r-mh"
description = "A simple maphack for Diablo II: Resurrected"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib"]
name = "d2rmh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
thiserror = "1.0.57"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_Input_KeyboardAndMouse",
]
